# toolbox

./: .gitignore  README.md  build_win.bat  pyproject.toml  requirements-mac.txt  requirements.txt  toolbox.py
resources/: config.json  default_config.json  example_config.json
tests/: conftest.py  test_config_and_repository.py  test_launcher.py  test_ui.py
toolbox/: __init__.py  __main__.py  core.py  data.py  globals.py  globalvars.py  main.py  model.py  resource.py  resources.py  ui.py  util.py
toolbox/services/: __init__.py  config_store.py  launcher.py  tool_repository.py
toolbox/ui/: main_window.py
toolbox/ui/widgets/: tool_widget.py
