[project]
name = "toolbox"
version = "0.6.0"
description = "Cross-platform launcher for Rez toolsets"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
pretty = true
show_error_codes = true
files = ["toolbox", "tests"]
